--- a/matti-sudoku.cabal
+++ b/matti-sudoku.cabal
@@ -1,12 +1,6 @@
 Name:                matti-sudoku
 Version:             0.1
-Synopsis:            Project Synopsis Here
-Description:         Project Description Here
 License:             PublicDomain
-Author:              Author
-Maintainer:          maintainer@example.com
-Stability:           Experimental
-Category:            Sudoku
 Build-type:          Simple
 Cabal-version:       >=1.2
 
@@ -14,16 +8,12 @@ Executable mysudoku
   hs-source-dirs: src
   main-is: heuristic.hs
   other-modules: Sudoku
+                 Search
 
   Build-depends:
     base                      >= 4     && < 5,
-    array -any,
     containers -any,
     vector -any,
     mtl                       >= 2     && < 3
 
-  if impl(ghc >= 6.12.0)
-    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
-                 -fno-warn-unused-do-bind
-  else
-    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
+  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
